force-app/main/default/objects/VoiceCall/fields/Account_for_Contained_Call__c.field-meta.xml
<CustomField>
    <fullName>Account_for_Contained_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account for Contained Call</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contained Calls</relationshipLabel>
    <relationshipName>Contained_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>