force-app/main/default/objects/VoiceCall/fields/Account_for_Voice_Call__c.field-meta.xml
<CustomField>
    <fullName>Account_for_Voice_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For reporting and list views for Voice Call, is the same as RelatedRecordId if the related record is a PersonAccount</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Voice Calls</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>