force-app/main/default/objects/VoiceCall/fields/Agent_Acknowledged_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>Agent_Acknowledged_Disclaimer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agent Acknowledged Disclaimer</label>
    <type>Checkbox</type>
</CustomField>