force-app/main/default/objects/VoiceCall/fields/Call_Flow__c.field-meta.xml
<CustomField>
    <fullName>Call_Flow__c</fullName>
    <defaultValue>&apos;Original Inbound&apos;</defaultValue>
    <label>Flow</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original Inbound</fullName>
            </value>
            <value>
                <fullName>Original Outbound</fullName>
            </value>
            <value>
                <fullName>Repeat Inbound</fullName>
            </value>
            <value>
                <fullName>Resolution Outbound</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
            <value>
                <fullName>IVR Contained Call</fullName>
            </value>
            <value>
                <fullName>Repeat Outbound</fullName>
            </value>
            <value>
                <fullName>Untracked Outbound</fullName>
            </value>
            <value>
                <fullName>$Label.Original_Inbound</fullName>
                <isActive>false</isActive>
                <label>$Label.Original_Inbound</label>
            </value>
            <value>
                <fullName>$Label.Original_Outbound</fullName>
                <isActive>false</isActive>
                <label>$Label.Original_Outbound</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>