force-app/main/default/objects/VoiceCall/fields/Caller_Identified_UI__c.field-meta.xml
<CustomField>
    <fullName>Caller_Identified_UI__c</fullName>
    <formula>IF( GC_Caller_Identified__c  = &apos;Yes&apos;,
IMAGE(&quot;/resource/1682974595000/PassPill&quot;,&quot;y&quot;,35,55) ,
IMAGE(&quot;/resource/1682976989000/FailPill&quot;,&quot;n&quot;, 35,55))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Caller Identified</label>
    <type>Text</type>
</CustomField>