force-app/main/default/objects/VoiceCall/fields/Caller_Number__c.field-meta.xml
<CustomField>
    <fullName>Caller_Number__c</fullName>
    <formula>FromPhoneNumber</formula>
    <label>Caller Number</label>
    <type>Text</type>
</CustomField>