force-app/main/default/objects/VoiceCall/fields/CRMAccountRowId__c.field-meta.xml
<CustomField>
    <fullName>CRMAccountRowId__c</fullName>
    <description>External AccountRowId; can be multiple from IVR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CRMAccountRowId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>