force-app/main/default/objects/VoiceCall/fields/CRMContactRowId__c.field-meta.xml
<CustomField>
    <fullName>CRMContactRowId__c</fullName>
    <description>CRM (or UCM?) ContactRowId from legacy system</description>
    <encryptionScheme>None</encryptionScheme>
    <label>CRMContactRowId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>