force-app/main/default/objects/VoiceCall/fields/GC_Account_Restriction__c.field-meta.xml
<CustomField>
    <fullName>GC_Account_Restriction__c</fullName>
    <description>Indicates the name of any Visibility Restriction on the associated Account</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Restriction</label>
    <length>254</length>
    <type>Text</type>
</CustomField>