force-app/main/default/objects/VoiceCall/fields/GC_AOID__c.field-meta.xml
<CustomField>
    <fullName>GC_AOID__c</fullName>
    <description>Each AOID is 16 characters long; can be multiple from IVR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>AOID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>