force-app/main/default/objects/VoiceCall/fields/GC_Authentication_Status__c.field-meta.xml
<CustomField>
    <fullName>GC_Authentication_Status__c</fullName>
    <description>GenCloud Member Authentication Status - this is the actual status sent by the IVR. See IVR Auth Status formula field for what is visible on the Tile and page.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Orig Authentication Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>