force-app/main/default/objects/VoiceCall/fields/GC_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>GC_Branch_Code__c</fullName>
    <description>Received from the IVR for inbound voice calls.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Branch Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>