force-app/main/default/objects/VoiceCall/fields/GC_Caller_ANI__c.field-meta.xml
<CustomField>
    <fullName>GC_Caller_ANI__c</fullName>
    <description>ANI from the IVR</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Caller ANI</label>
    <length>20</length>
    <type>Text</type>
</CustomField>