force-app/main/default/objects/VoiceCall/fields/GC_Caller_Identified__c.field-meta.xml
<CustomField>
    <fullName>GC_Caller_Identified__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Caller Identified</label>
    <length>10</length>
    <type>Text</type>
</CustomField>