force-app/main/default/objects/VoiceCall/fields/GC_CardMemberID__c.field-meta.xml
<CustomField>
    <fullName>GC_CardMemberID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Card Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>