force-app/main/default/objects/VoiceCall/fields/GC_Client_Id__c.field-meta.xml
<CustomField>
    <fullName>GC_Client_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>