force-app/main/default/objects/VoiceCall/fields/GC_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>GC_Company_Code__c</fullName>
    <description>ADP Company Code from UCM (pulled from all SORs) - passed to the Voice</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Company Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>