force-app/main/default/objects/VoiceCall/fields/GC_Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>GC_Conversation_Id__c</fullName>
    <description>GenCloud Conversation/Interaction/Transaction Id of actual voice call</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Conversation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>