force-app/main/default/objects/VoiceCall/fields/GC_IVR_Authentication_Type__c.field-meta.xml
<CustomField>
    <fullName>GC_IVR_Authentication_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IVR Authentication Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>