force-app/main/default/objects/VoiceCall/fields/GC_IVR_BUG__c.field-meta.xml
<CustomField>
    <fullName>GC_IVR_BUG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IVR_BUG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>