force-app/main/default/objects/VoiceCall/fields/GC_IVR_Menu_Intent__c.field-meta.xml
<CustomField>
    <fullName>GC_IVR_Menu_Intent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IVR Menu Intent</label>
    <length>200</length>
    <type>Text</type>
</CustomField>