force-app/main/default/objects/VoiceCall/fields/GC_IVR_Opt_Out_Time__c.field-meta.xml
<CustomField>
    <fullName>GC_IVR_Opt_Out_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IVR Opt-Out Time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>