force-app/main/default/objects/VoiceCall/fields/GC_IVR_PreAuth__c.field-meta.xml
<CustomField>
    <fullName>GC_IVR_PreAuth__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pre-Auth Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>