force-app/main/default/objects/VoiceCall/fields/GC_Menu_Selected__c.field-meta.xml
<CustomField>
    <fullName>GC_Menu_Selected__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IVR Menu Selected</label>
    <length>100</length>
    <type>Text</type>
</CustomField>