force-app/main/default/objects/VoiceCall/fields/GC_Menu_Selections__c.field-meta.xml
<CustomField>
    <fullName>GC_Menu_Selections__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Menu Selections</label>
    <type>TextArea</type>
</CustomField>