force-app/main/default/objects/VoiceCall/fields/GC_Message__c.field-meta.xml
<CustomField>
    <fullName>GC_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IVR Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>