force-app/main/default/objects/VoiceCall/fields/GC_MFA_Message__c.field-meta.xml
<CustomField>
    <fullName>GC_MFA_Message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MFA Message</label>
    <length>128</length>
    <type>Text</type>
</CustomField>