force-app/main/default/objects/VoiceCall/fields/GC_OOID__c.field-meta.xml
<CustomField>
    <fullName>GC_OOID__c</fullName>
    <description>Can be multiple values; pipe-delimited</description>
    <encryptionScheme>None</encryptionScheme>
    <label>OOID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>