force-app/main/default/objects/VoiceCall/fields/GC_RUN_IID__c.field-meta.xml
<CustomField>
    <fullName>GC_RUN_IID__c</fullName>
    <description>RUN IID from IVR; used to identify account</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>SBS RUN IID</inlineHelpText>
    <label>IID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>