force-app/main/default/objects/VoiceCall/fields/IVR_Auth_Status__c.field-meta.xml
<CustomField>
    <fullName>IVR_Auth_Status__c</fullName>
    <formula>IF( GC_Authentication_Status__c = &apos;Yes&apos;,
IMAGE(&quot;/resource/1682974595000/PassPill&quot;,&quot;y&quot;,35,55) ,
IF( GC_Authentication_Status__c = &apos;N/A&apos;, &apos;N/A&apos;,
IMAGE(&quot;/resource/1682976989000/FailPill&quot;,&quot;n&quot;, 35,55)))</formula>
    <label>IVR Auth Status</label>
    <type>Text</type>
</CustomField>