force-app/main/default/objects/VoiceCall/fields/IVR_AUTHENTICATED__c.field-meta.xml
<CustomField>
    <fullName>IVR_AUTHENTICATED__c</fullName>
    <description>Yes or No</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IVR_AUTHENTICATED</label>
    <length>10</length>
    <type>Text</type>
</CustomField>