force-app/main/default/objects/VoiceCall/fields/IVR_Authentication__c.field-meta.xml
<CustomField>
    <fullName>IVR_Authentication__c</fullName>
    <formula>IF( IVR_AUTHENTICATED__c = &apos;Yes&apos;, 
IMAGE(&quot;/resource/1682974595000/PassPill&quot;,&quot;y&quot;,35,55) + GC_IVR_Authentication_Type__c ,
IMAGE(&quot;/resource/1682976989000/FailPill&quot;,&quot;n&quot;, 35,55))</formula>
    <label>IVR Authentication</label>
    <type>Text</type>
</CustomField>