force-app/main/default/objects/VoiceCall/fields/IVR_DNIS__c.field-meta.xml
<CustomField>
    <fullName>IVR_DNIS__c</fullName>
    <description>Distinctive name of GenCloud org used to identify the agent to whom this call will be directed. Since SBS, NAS, MAS are on a single org, this must be more granular than just GenCloud org.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IVR_DNIS</label>
    <length>50</length>
    <type>Text</type>
</CustomField>