force-app/main/default/objects/VoiceCall/fields/IVR_Region__c.field-meta.xml
<CustomField>
    <fullName>IVR_Region__c</fullName>
    <description>Processing Region</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Processing Region</inlineHelpText>
    <label>IVR Region</label>
    <length>20</length>
    <type>Text</type>
</CustomField>