force-app/main/default/objects/VoiceCall/fields/IVR_ROUTING_QUEUE__c.field-meta.xml
<CustomField>
    <fullName>IVR_ROUTING_QUEUE__c</fullName>
    <description>When a voice call is transferred, this holds the name of the GC Transfer Queue from whence it was transferred...</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IVR_ROUTING_QUEUE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>