force-app/main/default/objects/VoiceCall/fields/IVR_SFDC_Profile__c.field-meta.xml
<CustomField>
    <fullName>IVR_SFDC_Profile__c</fullName>
    <description>Indicates the GenCloud org and which BU queue the call is coming in from.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IVR SFDC_Profile</label>
    <length>100</length>
    <type>Text</type>
</CustomField>