force-app/main/default/objects/VoiceCall/fields/MFA_Status__c.field-meta.xml
<CustomField>
    <fullName>MFA_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MFA Status_Actual</label>
    <length>20</length>
    <type>Text</type>
</CustomField>