force-app/main/default/objects/VoiceCall/fields/Number_Verified__c.field-meta.xml
<CustomField>
    <fullName>Number_Verified__c</fullName>
    <formula>IF((
SUBSTITUTE(Account_for_Voice_Call__r.PersonContact.Phone, &quot;[()\\-]&quot;, &quot;&quot;) = SUBSTITUTE(FromPhoneNumber, &quot;[()\\-]&quot;, &quot;&quot;) 
||
SUBSTITUTE(Account_for_Voice_Call__r.PersonContact.OtherPhone, &quot;[()\\-]&quot;, &quot;&quot;) = SUBSTITUTE(FromPhoneNumber, &quot;[()\\-]&quot;, &quot;&quot;)),
IMAGE(&quot;/resource/1686918150000/YESPill&quot;, &quot;y&quot;,30,50) ,
IMAGE(&quot;/resource/1686920746000/NOPill&quot;, &quot;n&quot;,27,50) )</formula>
    <label>Number Verified</label>
    <type>Text</type>
</CustomField>