force-app/main/default/objects/VoiceCall/fields/PrimaryCase__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary Case created by this Voice Call</description>
    <label>Primary Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Originating Calls</relationshipLabel>
    <relationshipName>OriginatingCalls</relationshipName>
    <type>Lookup</type>
</CustomField>