force-app/main/default/objects/VoiceCall/fields/StepUp_Passed__c.field-meta.xml
<CustomField>
    <fullName>StepUp_Passed__c</fullName>
    <description>Indicator that StepUp has been successful, so that the UI knows to hide StepUp</description>
    <encryptionScheme>None</encryptionScheme>
    <label>StepUp Passed</label>
    <length>50</length>
    <type>Text</type>
</CustomField>