force-app/main/default/objects/VoiceCall/fields/This_Case__c.field-meta.xml
<CustomField>
    <fullName>This_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The current case or the original case associated with this voice call on initial dial-in</description>
    <label>Original Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Voice Calls</relationshipLabel>
    <relationshipName>Voice_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>