force-app/main/default/objects/VoiceCall/fields/Visibility_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Restriction__c</fullName>
    <label>Visibility Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Visibility_Restriction</valueSetName>
    </valueSet>
</CustomField>