force-app/main/default/objects/VoiceCall/fields/Wisely_Card_Id__c.field-meta.xml
<CustomField>
    <fullName>Wisely_Card_Id__c</fullName>
    <description>The GCC cardBatchId__c field is stored here when the card has been validated in the IVR process.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Wisely Card Id</label>
    <length>128</length>
    <type>Text</type>
</CustomField>