force-app/main/default/objects/VoiceCall/recordTypes/Enterprise_Voice_Call_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Enterprise_Voice_Call_Record_Type</fullName>
    <active>true</active>
    <description>Base Record Type for all Enterprise Voice Calls; to be used as a &quot;master template&quot; if necessary.</description>
    <label>Enterprise Voice Call Record Type</label>
</RecordType>