force-app/main/default/objects/VoiceCall/recordTypes/Wisely_Voice_Call_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Wisely_Voice_Call_Record_Type</fullName>
    <active>true</active>
    <label>Wisely Voice Call Record Type</label>
</RecordType>