force-app/main/default/objects/VoiceCall/validationRules/Disable_Case_Remove.validationRule-meta.xml
<ValidationRule>
    <fullName>Disable_Case_Remove</fullName>
    <active>true</active>
    <description>Disables the Remove button on the &apos;Case Details&apos; component.</description>
    <errorConditionFormula>AND(ISCHANGED(  This_Case__c  ), NOT(ISBLANK(PRIORVALUE( This_Case__c ))), ISBLANK( This_Case__c ))</errorConditionFormula>
    <errorMessage>Case Details cannot be blank for Voice Call.</errorMessage>
</ValidationRule>