force-app/main/default/objects/VoiceCall/validationRules/Disable_Member_Remove.validationRule-meta.xml
<ValidationRule>
    <fullName>Disable_Member_Remove</fullName>
    <active>true</active>
    <description>Disables the Remove button on the &apos;Member&apos; component</description>
    <errorConditionFormula>AND(ISCHANGED( Contact__c  ), NOT(ISBLANK(PRIORVALUE( Contact__c ))), ISBLANK( Contact__c ))</errorConditionFormula>
    <errorMessage>Member cannot be blank for Voice Call.</errorMessage>
</ValidationRule>