force-app/main/default/objects/VoiceCall/listViews/All_WMS_Voice_Calls.listView-meta.xml
<ListView>
    <fullName>All_WMS_Voice_Calls</fullName>
    <columns>Name</columns>
    <columns>CallType</columns>
    <columns>FromPhoneNumber</columns>
    <columns>CallResolution</columns>
    <columns>CallStartDateTime</columns>
    <columns>EndUser</columns>
    <columns>Owner</columns>
    <columns>QualityScore</columns>
    <filterScope>Everything</filterScope>
    <label>All WMS Voice Calls</label>
</ListView>