force-app/main/default/objects/VoiceCall/listViews/Bogus_Transfer_Voice_Calls.listView-meta.xml
<ListView>
    <fullName>Bogus_Transfer_Voice_Calls</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>GC_Conversation_Id__c</columns>
    <columns>CallType</columns>
    <columns>CallDisposition</columns>
    <columns>Description</columns>
    <columns>This_Case__c</columns>
    <columns>User</columns>
    <columns>CreatedDate</columns>
    <columns>VendorCallKey</columns>
    <columns>GC_CardMemberID__c</columns>
    <columns>PreviousCall</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CallType</field>
        <operation>equals</operation>
        <value>5</value>
    </filters>
    <filters>
        <field>PreviousCall</field>
        <operation>equals</operation>
    </filters>
    <label>Bogus Transfer Voice Calls</label>
</ListView>