force-app/main/default/objects/VoiceCall/listViews/Calls_for_Member.listView-meta.xml
<ListView>
    <fullName>Calls_for_Member</fullName>
    <columns>Name</columns>
    <columns>CallStartDateTime</columns>
    <columns>CallType</columns>
    <columns>Owner</columns>
    <columns>GC_Authentication_Status__c</columns>
    <columns>GC_IVR_PreAuth__c</columns>
    <columns>GC_Menu_Selected__c</columns>
    <columns>RelatedRecord</columns>
    <filterScope>Everything</filterScope>
    <label>Calls by Member</label>
</ListView>