force-app/main/default/objects/VoiceCall/listViews/Inbound_Voice_Calls.listView-meta.xml
<ListView>
    <fullName>Inbound_Voice_Calls</fullName>
    <columns>Name</columns>
    <columns>Account_for_Voice_Call__c</columns>
    <columns>FromPhoneNumber</columns>
    <columns>CallStartDateTime</columns>
    <columns>Owner</columns>
    <columns>Call_Flow__c</columns>
    <columns>MFA_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Call_Flow__c</field>
        <operation>equals</operation>
        <value>Original Inbound,Repeat Inbound</value>
    </filters>
    <label>Inbound Voice Calls</label>
</ListView>