force-app/main/default/objects/VoiceCall/listViews/IVR_Call_Details.listView-meta.xml
<ListView>
    <fullName>IVR_Call_Details</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>Account_for_Voice_Call__c</columns>
    <columns>Contact__c</columns>
    <columns>GC_Conversation_Id__c</columns>
    <columns>GC_Authentication_Status__c</columns>
    <columns>CallType</columns>
    <columns>CallDisposition</columns>
    <columns>This_Case__c</columns>
    <columns>User</columns>
    <columns>IVR_Auth_Status__c</columns>
    <columns>GC_IVR_PreAuth__c</columns>
    <columns>GC_IVR_Language__c</columns>
    <columns>GC_Menu_Selected__c</columns>
    <columns>GC_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>IVR Call Details</label>
</ListView>