force-app/main/default/objects/VoiceCall/listViews/Wisely_Pilot_1_Call_Details_DO_NOT_MODIFY.listView-meta.xml
<ListView>
    <fullName>Wisely_Pilot_1_Call_Details_DO_NOT_MODIFY</fullName>
    <columns>Name</columns>
    <columns>RelatedRecord</columns>
    <columns>CallType</columns>
    <columns>CallDisposition</columns>
    <columns>This_Case__c</columns>
    <columns>User</columns>
    <columns>CreatedDate</columns>
    <columns>GC_CardMemberID__c</columns>
    <columns>IVR_Auth_Status__c</columns>
    <columns>GC_Menu_Selected__c</columns>
    <columns>Number_Verified__c</columns>
    <columns>Recipient</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreatedDate</field>
        <operation>greaterThan</operation>
        <value>11/15/2023 8:00 AM</value>
    </filters>
    <filters>
        <field>CallType</field>
        <operation>equals</operation>
        <value>1,5</value>
    </filters>
    <label>Wisely Pilot 1 Calls (DO NOT MODIFY)</label>
</ListView>